Fixed spacing of gif between submit and buttons. Fixed as will position of Submit

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,62 +1,3 @@
-body {
-      background-color: #ebfffb;
-}
-
-button, div, form, input {
-      margin: 10px;
-    
-}
-
-#title {
-
-      font-family: 'Open Sans', sans-serif;
-      font-size: 100px;
-      color: 
-      text-shadow: 2px 2px #032535;
-}
-
-.container {
-
-   
-      width: 100%;
-      height: 100%;
-      
-}
-
-input[type=text] {
-
-      background-color: #032535;
-      color: white;
-      width: 200%;
-      height: 30%;
-
-}
-
-input[type=text]:focus {
-      border: 3px solid #555;
-    }
-
-
-.btn-primary, #add-animal {
-      color: #fff;
-      background-color: #ff5858;
-      border-color: #ff5858;
-      box-shadow: 6px 6px 0px #61234e;
-      font-family: 'Pathway Gothic One', sans-serif;
-      letter-spacing: 3px;
-}
-
-input
-
-div.polaroid {
-      width: 284px;
-      padding: 10px 10px 20px 10px;
-      border: 1px solid #BFBFBF;
-      background-color: white;
-      box-shadow: 10px 10px 5px #aaaaaa;
-}
-
-
 /* All font options */
 
 /* font-family: 'Oswald', sans-serif;
@@ -67,3 +8,74 @@ font-family: 'Pathway Gothic One', sans-serif;
 font-family: 'Gothic A1', sans-serif;
 font-family: 'Open Sans', sans-serif;
 */
+
+body {
+      background-color: #ebfffb;
+}
+
+button,
+div,
+form,
+input {
+      margin: 10px;
+
+}
+
+img {
+      width: 30%;
+      margin: 1%;
+      float: left;
+      height: 250px;
+
+}
+
+form {
+      float: right;
+}
+
+#title {
+
+      font-family: 'Open Sans', sans-serif;
+      font-size: 100px;
+      text-shadow: 2px 2px #032535;
+}
+
+.container {
+
+
+      width: 100%;
+      height: 100%;
+
+}
+
+input[type=text] {
+
+      background-color: #032535;
+      color: white;
+      width: 100%;
+      height: 40%;
+
+}
+
+
+
+input[type=text]:focus {
+      border: 3px solid #555;
+}
+
+
+.btn-primary,
+#add-animal {
+      color: #fff;
+      background-color: #ff5858;
+      border-color: #ff5858;
+      box-shadow: 6px 6px 0px #61234e;
+      font-family: 'Pathway Gothic One', sans-serif;
+      letter-spacing: 3px;
+}
+
+#animal-giphys {
+
+      font-family: 'Raleway', sans-serif;
+      padding-top: 116px;
+}
